# resume-utd

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
data/: data_template.json
src/: main.rs
src/data/: manager.rs  mod.rs
src/tui/: app.rs  mod.rs  ui.rs
src/tui/components/: content_pane.rs  mod.rs  sidebar.rs
