[package]
name = "resume-utd"
version = "0.2.0"
edition = "2024"
authors = ["Jack Graver <jackgraver@gmail.com>"]
description = "A 'up-to-date' resume generator"
repository = "https://github.com/jackgraver/resume-utd"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
handlebars = "5"
ratatui = "0.29.0"
crossterm = "0.28.1"